# Custom_Object_Detection_Scratch

./: .gitignore  Assignment_1_Custom_Object_Detection_Report.docx  README.md  analysis.ipynb  demo_video.py  evaluate.py  inference.py  main.py  pyproject.toml  report.md  requirements.txt  train.py
data/: dataset.py  download_voc.py  transforms.py
models/: backbone.py  detector.py
utils/: collate.py  visualization.py
